--- a/Listas/index.html
+++ b/Listas/index.html
@@ -13,6 +13,7 @@
     <button id="m2">2x2</button>
     <button id="m3">3x3</button>
     <button id="m4">4x4</button>
+    <button id="refresh">Calcula otra matriz</button>
     <div id="yo1"></div>
             
     <link rel="stylesheet" href="layout.css">
